--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,35 @@
 {
+  "functions": {
+    "public/**": {
+      "memory": 128
+    }
+  },
   "rewrites": [
     {
       "source": "/",
       "destination": "/index.html"
+    },
+    {
+      "source": "/public/(.*)",
+      "destination": "/public/$1"
     }
   ],
   "headers": [
     {
-      "source": "/sw.js",
+      "source": "/public/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     },
     {
-      "source": "(.*)",
+      "source": "/(.*\\.(js|css|html))",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, s-maxage=86400, max-age=86400"
-        },
-        {
-          "key": "Vercel-CDN-Cache-Control",
-          "value": "max-age=3600"
+          "value": "public, max-age=86400"
         }
       ]
     }
